--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@ title: Carlos Herrero
 
     		<div class="blurb">
         		<h1>About Me</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+				<p>My name is Carlos Herrero and I am an Spanish double degree student of Computer Science and Business Management from the University 
+				Charles III of Madrid.
+				<br><br>
+				Currently I am studying my senior year in Computer Science in the University of Colorado Boulder, as a part of an exchange program. 
+				Here, I am trying to get the best of my international program while getting involved in Boulder's community.
+				<a href="http://hackcu.org/">Hack CU</a>
+				My main area of interest in Computer Science are Algorithms althought I really enjoy working in front-end since it allows me to start 
+				new projects by myself.
+				</p>
     		</div><!-- /.blurb -->
 		<footer>
     		<ul>
