--- a/index.html
+++ b/index.html
@@ -8,17 +8,27 @@ title: Carlos Herrero
 				<p>My name is Carlos Herrero and I am an Spanish double degree student of Computer Science and Business Management from the University 
 				Charles III of Madrid.
 				<br><br>
-				Currently I am studying my senior year in Computer Science in the University of Colorado Boulder, as a part of an exchange program. 
-				Here, I am trying to get the best of my international program while getting involved in Boulder's community.
-				<a href="http://hackcu.org/">Hack CU</a>
+				Currently I am studying my senior year in Computer Science at the University of Colorado Boulder, as a part of an exchange program. 
+				Here, I am trying to get the best of my international program while getting involved in Boulder's community. With that intention I joined some 
+				of the university clubs and associations, as BFIS (Boulder Friends of International Students), Mobile Makers club focused in the development of mobile Apps, and 
+				<a href="http://hackcu.org/">HackCU</a>, the organization in charge of Colorado's biggest student hackathon.
+				As a member of HackCU, I work with the sponsorship team, helping fundraising money and getting mentors to help the hackers during the hackathon.
+				<br>
 				My main area of interest in Computer Science are Algorithms althought I really enjoy working in front-end since it allows me to start 
-				new projects by myself.
+				new projects by myself. 
+				<br>
+				Regarding to my Business Management studies, I am interested mainly in Marketing and Markets Research, specially in all concerning the technologic sector.
+				<br>
+				I am currently looking for internship opportunities in Europe or the United States to develop my faculties and exploit my international skills.
+				<br>
+				Do not hesitate contact me in the links below for more information.
+				<br>
 				</p>
     		</div><!-- /.blurb -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:cahe5322@gmail.com">email</a></li>
+        		<li><a href="https://github.com/CarlosHL">github.com/CarlosHL</a></li>
 			</ul>
 		</footer>
 	</body>
